# group-4

./: .gitignore  .gitignore.bak  .gitmodules  CMakeLists.txt  CMakeSettings.json  CPPLINT.cfg  config.json
.github/workflows/: build.yml
assets/animation/: Animation - Testing.blend  Animation - Testing.fbx  Animation - Testing2.fbx  Animation -Avocado.fbx  Animation -Bee (2).fbx  Animation -Racoon.fbx  Animation 512023 cycle.blend  Animation 512023 cycle.fbx  Animation-FinalTesting.blend  Animation-FinalTesting.fbx  TestingAnimation.blend  TestingAnimation.fbx  TestingRunningAnimation.blend  TestingRunningAnimation.fbx  one-piece.blend  skin-avocado.blend  skin-avocado.fbx  testing-animation.fbx
assets/animation/withUV/: Animation -Bee2.fbx  Animation -Cat.fbx  Animation -Duck.fbx  Animation -Unicorn.fbx  Animation-FinalTesting.blend  untitled.blend
assets/model/: Body Mesh  5_1.blend  finalized-model - Copy.blend  finalized-model.blend  finalized-model.fbx  formal-model.fbx  map - 54.blend  map - 58.blend  map-final-singlemap.mtl  map-final-singlemapSmooth.mtl  map-visual.mtl  map.blend  model-skeleton-finish.blend  model-skeleton-texture.fbx  model-skeleton.blend  one-piece.fbx  quad.blend  quad.blend1  start-animation.blend  test-colliders.blend  test-colliders.blend1  testing-map.fbx  testing-model.fbx
assets/model/Final-Version/: PureMesh-Final.blend  PureMesh-Final.fbx  PureSkeleton-Final.blend  PureSkeleton-Final.fbx  WeightPaintFinished.blend  WeightPaintFinished.fbx
assets/model/dev/: bevel_cube.blend  map-flooronly.mtl  test-colliders-mtl.blend  test-colliders-mtl.blend1  test-colliders-mtl.mtl  test-colliders.blend  test-slope-visual.mtl
assets/model/dev/skybox_generate/: env-to-cubemap.blend  env-to-cubemap.blend1  sky_template.blend1
assets/model/map/: Animation-FinalTesting2.fbx  M1.fbx  M2.fbx  P1.fbx  basic-assets.blend  block.blend  block.fbx  creature.fbx  leaf.blend  leaf.fbx  leaf1.fbx  leaf2.fbx  map-data-example.blend  map-data-example.blend1  map-physic.blend  map.fbx
assets/model/skins/: skin-avocado.blend  skin-avocado.fbx  skin-bee.blend  skin-bee.fbx  skin-cat.blend  skin-cat.fbx  skin-duck.blend  skin-duck.fbx  skin-racoon.blend  skin-racoon.fbx  skin-unicorn.blend  skin-unicorn.fbx
assets/models/: bevel_cube.blend1
assets/models/skybox/Cube Map Creation Toolkit/: Cube Cam.blend  Cube Map Compositor.blend
assets/models/skybox_generate/: sky_template.blend  sky_template.blend1
assets/models/skybox_generate/Cube Map Creation Toolkit/: Cube Cam.blend  Cube Cam.blend1
assets/shaders/: cloud.frag  depth.frag  lighting.frag  projective.vert  shader.frag  shader.vert  shader_skinning.vert  shaderx.frag  shaderx.vert  skybox.frag  skybox.vert  toon.frag  toonsimple.frag  unlit.frag  unlitx.frag
core/: main.cpp
core/include/: Player.h
core/include/math/: matrix.h  vector.h
core/include/math/shape/: AABShape.h  BoundingShape.h  ConvexMeshShape.h  ConvexShape.h  CylinderShape.h  (+2 more)
core/src/: Player.cpp
core/src/math/: ConvexShape.cpp
graphics/: engine.sln
graphics/project/: HW3.vcxproj  HW3.vcxproj.filters  Scene.cpp  Scene.inl  imgui.ini  main.cpp  main2.cpp
graphics/project/include/: AnimationClip.h  Camera.h  Cube.h  Input.h  Joint.h  Keyframe.h  Mesh.h  Node.h  Obj.h  Scene.h  Skeleton.h  Window.h  core.h  main.h
graphics/project/shaders/: shader.frag
graphics/project/src/: AnimationClip.cpp  Camera.cpp  Cube.cpp  Joint.cpp  Skeleton.cpp  Skin.cpp  Window.cpp
include/client/graphics/: AnimationClip.h  AnimationPlayer.h  AssimpAnimation.h  AssimpMath.h  AssimpMesh.h  AssimpModel.h  AssimpNode.h  CPPLINT.cfg  Camera.h  Channel.h  Collider.h  ColliderData.h  ColliderImporter.h  Cube.h  DOF.h  FontRenderer.h  GameThing.h  HUD.h  Input.h  InputListener.h  ItemBox.h  Joint.h  Keyframe.h  Leaderboard.h  Lights.h  Load.h  Lobby.h  MapDataImporter.h  MapObj.h  MapPointData.h  Material.h  Mesh.h  Model.h  Music.h  Node.h  Obj.h  Particle.h  ParticleSystem.h  Player.h  PlayerModel.h  (+21 more)
include/config/: lib.hpp
include/core/: Player.h  lib.hpp
include/core/game/: Registry.h  Serializable.h
include/core/math/: Ray.h  matrix.h  vector.h
include/core/util/: ByteBuffer.h  global.h
include/network/: connection.hpp  effect.hpp  event.hpp  game.hpp  item.hpp  lib.hpp  message.hpp  session.hpp  tcp_client.hpp  tcp_server.hpp
include/server/: game.hpp  manager.hpp
lib/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  main_assimp.cpp
src/client/graphics/: AnimationClip.cpp  Assimp2Scene.inl  AssimpAnimation.cpp  AssimpMesh.cpp  AssimpModel.cpp  AssimpNode.cpp  AssimpScene.inl  Camera.cpp  Cube.cpp  HUD.cpp  Input.cpp  ItemBox.cpp  Joint.cpp  Leaderboard.cpp  Lobby.cpp  Lobby.inl  Particle.cpp  ParticleSystem.cpp  Player.cpp  Scene-old.inl  Scene.cpp  Scene.inl  Skeleton.cpp  Skin.cpp  SkinnedMesh.cpp  Start.cpp  Texture.cpp  TextureCube.cpp  Tokenizer.cpp  Window.cpp  shader.cpp
src/client/graphics/imported/: Tokenizer.cpp  parallel.cpp
src/config/: CMakeLists.txt  lib.cpp
src/core/: CMakeLists.txt  Player.cpp  lib.cpp  main.cpp
src/core/game/effect/: ContextAwareGlobalEffect.cpp  GlobalEffect.cpp  StaticGlobalEffect.cpp
src/core/game/event/: EventManager.cpp
src/core/game/level/: Environment.cpp  Level.cpp  PObjectCollection.cpp  StatisticManager.cpp
src/core/game/mode/: GameMode.cpp  GameModeBases.cpp  GameModes.cpp
src/core/game/modifier/: Modifiable.cpp  Modifiers.cpp
src/core/game/packet/: CAddPObjectPacket.cpp  CLevelStatusPacket.cpp  CRemovePObjectPacket.cpp  CUpdatePObjectPacket.cpp  PacketHandler.cpp
src/core/game/physics/: CollisionBounds.cpp  Mushroom.cpp  PObject.cpp  PObjectType.cpp  Player.cpp  PowerUp.cpp  River.cpp
src/core/math/: ConvexShape.cpp
src/core/util/: ByteBuffer.cpp  global.cpp
src/network/: CMakeLists.txt  connection.cpp  lib.cpp  message.cpp  session.cpp  tcp_client.cpp  tcp_server.cpp
src/server/: CMakeLists.txt  game.cpp  main.cpp  manager.cpp
tests/: CMakeLists.txt  example.cpp
tests/core/: benchmark.cpp  collision.cpp  game.cpp  math.cpp  misc.cpp
(+57 files in other folders)
